syntax = "proto3";

import "google/protobuf/empty.proto";

package medical_supplies;

option go_package = "message.proto/medical_supplies";

service MedicalSupplies {
  rpc TestRequest(Request) returns (DummyResponse) {}
  rpc CreateUser(User) returns (UserResponse) {}
  rpc FetchUsers(google.protobuf.Empty) returns (UserResponse) {}
  rpc UpdateUser(Request) returns (UserResponse) {}
  rpc DeleteUser(User) returns (UserResponse) {}
  rpc InsertEquipment(Item) returns (EquipmentResponse) {}
  rpc FetchEquipment(google.protobuf.Empty) returns (EquipmentResponse) {}
  rpc UpdateEquipment(User) returns (EquipmentResponse) {}
  rpc DeleteEquipment(Request) returns (EquipmentResponse) {}
}

enum ErrorCode {
  OK = 0;
  NOT_FOUND = 1;
  INTERNAL_ERROR = 2;
  FATAL = 3;
}

message Error {
  ErrorCode Code = 1;
  string Message = 2;
}

message Request {
  string Data = 1;
}

message DummyResponse {
  string Data = 1;
}

message UserResponse { 
  repeated User Users = 1;
  Error Error = 2;
}

message EquipmentResponse {
  repeated Item Items = 1;
  Error Error = 2;
}

message User {
	string Id = 1;
	string Username = 2;
	string Password = 3;
	string Name = 4;
	string Surname = 5;
	string Role = 6;
	string Department = 7;
  string Created = 8;
  string LastLogin = 9;
}

message Item {
  string Id = 1;
	string Name = 2;
  string Description = 3;
	string ReceivedDate = 4;
  string TakenDate = 5;
	string ModifiedDate = 6;
  int32 Quantity = 7;
	string Category = 8;
}
